# mt2

./: CMakeLists.txt  MT2.c  README.md  clean_build.sh  compile.sh  do.sh  fasm.c  fasm.h  grind.sh  ir.c  ir.h  ir_IrItem.h  ir_Proc.h  ir_StackItem.h  ir_stack_item.h  itoa.asm  maybe_tok_Tok_h  maybe_tok_c  mt2std.asm  notes.txt  panic.c  panic.h  teet.sh  tok.c  tok.h  tok_Tok.h  tok_tok.h  util.c  util.h  vec.c  vec.h  vec_Tok.h  vec_ir_IrItem.h  vec_ir_Proc.h  vec_ir_StackItem.h  vec_ir_stack_item.h  vec_tok.h
bench/: a.c  f.py
teet/: inp.mt2
